DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
Feb-03-2005 patrickh    Use $JCCL_DEFINITION_PATH to augment the .jdef search
                        path rather than having it override the default search
                        path.
                        NEW VERSION: 0.92.1

[1.0 Beta 2 released - 1.18.2005]==============================================
Jan-18-2005 patrickh    NEW VERSION: 0.92.0
Jan-09-2005 patrickh    Merged the methods setContext() and setConfigElement()
                        in org.vrjuggler.jccl.editors.CustomEditor into the
                        single method setConfig().
                        NEW VERSION: 0.91.1

[1.0 Beta 1 released - 12.24.2004]=============================================
Dec-23-2004 patrickh    NEW VERSION: 0.91.0
Nov-30-2004 patrickh    Extended the config definition file markup to allow
                        identification of definition versions that should not
                        be instantiated as config elements in config files.
                        NEW VERSION: 0.24.0
Nov-24-2004 patrickh    Sped up validation of .jdef and .jconf files.
                        NEW VERSION: 0.23.3
Nov-19-2004 patrickh    Restored the ability for .jconf files to extend the
                        .jdef file search path.
                        NEW VERSION: 0.23.2
Nov-17-2004 patrickh    Fixed config file lookup problems that showed up under
                        very specific circumstances.
                        NEW VERSION: 0.23.1
Nov-12-2004 patrickh    In the Java APi, the notion that a property definition
                        has a name other than its XML token has been removed.
                        NEW VERSION: 0.23.0
Nov-12-2004 patrickh    Fixed the config definition editor.
                        NEW VERSION: 0.22.0
Nov-05-2004 patrickh    Updated to require Tweek 0.19.2.
                        NEW VERSION: 0.21.1