@@ -1,3 +1,4 @@
+0.92.2-0 @02/06/2005 23:30:00 UTC@
 0.92.1-0 @02/03/2005 14:45:00 UTC@
 0.92.0-0 @01/18/2005 16:05:00 UTC@
 0.91.1-0 @01/09/2005 15:45:00 UTC@
